<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vert_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vert_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/iv_artwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/gl_vert_end"
        app:layout_constraintStart_toStartOf="@+id/gl_vert_start"
        app:layout_constraintTop_toTopOf="@+id/gl_hor_top"
        app:layout_constraintWidth_percent=".92"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_author"
        style="@style/ArtworkTextView"
        android:layout_marginTop="16dp"
        android:text="@string/artwork_author"
        app:layout_constraintEnd_toEndOf="@+id/iv_artwork"
        app:layout_constraintStart_toStartOf="@+id/iv_artwork"
        app:layout_constraintTop_toBottomOf="@+id/iv_artwork" />

    <TextView
        android:id="@+id/tv_artwork_name"
        style="@style/ArtworkTextView"
        android:layout_marginTop="8dp"
        android:text="@string/artwork_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_author"
        app:layout_constraintStart_toStartOf="@+id/tv_author"
        app:layout_constraintTop_toBottomOf="@+id/tv_author" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/ArtworkTextViewAdditionTitle"
        android:layout_marginTop="16dp"
        android:text="@string/date_title"
        app:layout_constraintStart_toStartOf="@+id/iv_artwork"
        app:layout_constraintTop_toBottomOf="@+id/tv_artwork_name" />

    <TextView
        android:id="@+id/tv_place_of_origin"
        style="@style/ArtworkTextViewAdditionTitle"
        android:text="@string/place_of_origin"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_value" />

    <TextView
        android:id="@+id/tv_display"
        style="@style/ArtworkTextViewAdditionTitle"
        android:text="@string/display"
        app:layout_constraintStart_toStartOf="@+id/tv_place_of_origin"
        app:layout_constraintTop_toBottomOf="@+id/tv_place_of_origin_value" />

    <TextView
        android:id="@+id/tv_dimension"
        style="@style/ArtworkTextViewAdditionTitle"
        android:text="@string/dimension"
        app:layout_constraintStart_toStartOf="@+id/tv_display"
        app:layout_constraintTop_toBottomOf="@+id/tv_display_value" />

    <TextView
        android:id="@+id/tv_date_value"
        style="@style/ArtworkTextViewAddition"
        android:text="@string/date_value"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date"
        app:layout_constraintEnd_toEndOf="@+id/tv_artwork_name"
        app:layout_constraintTop_toTopOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_place_of_origin_value"
        style="@style/ArtworkTextViewAddition"
        android:layout_marginBottom="5dp"
        android:text="@string/place_of_origin_value"
        app:layout_constraintBottom_toBottomOf="@+id/tv_place_of_origin"
        app:layout_constraintEnd_toEndOf="@+id/tv_date_value"
        app:layout_constraintTop_toTopOf="@+id/tv_place_of_origin" />

    <TextView
        android:id="@+id/tv_display_value"
        style="@style/ArtworkTextViewAddition"
        android:text="@string/display_value"
        app:layout_constraintBottom_toBottomOf="@+id/tv_display"
        app:layout_constraintEnd_toEndOf="@+id/tv_place_of_origin_value"
        app:layout_constraintTop_toTopOf="@+id/tv_display" />

    <TextView
        android:id="@+id/tv_dimension_value"
        style="@style/ArtworkTextViewAddition"
        android:text="@string/dimension_value"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dimension"
        app:layout_constraintEnd_toEndOf="@+id/tv_display_value"
        app:layout_constraintTop_toTopOf="@+id/tv_dimension" />

</androidx.constraintlayout.widget.ConstraintLayout>
